components/product-page/style.module.scss
.buyNowPanel{
  top: 33.3333%;
  max-width: 500px;
  width: calc(100% - 600px);
  left: 100%;
  height: 1px;
  bottom: 0;
}

.scrollableY {
  max-height: 215px;
  overflow-y: auto;
}

.imageContainer {
  h1 {
    text-shadow: 2px 2px 2px #222 ;
    background: linear-gradient(to bottom,rgb(50 50 50 / 60%) 0,transparent 100%)
  }
}

.productNameMobile {
  max-width: 530px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.triangle {
  font-size: 6rem;
  color: currentcolor;
  line-height: 1;
  animation: triangle-animation 1s ease-in-out infinite alternate;
}

.buyNowPanelMobile {
  [class*=card] {
    max-width: 535px;
    margin-left: auto;
    margin-right: auto;
  }
}

@keyframes triangle-animation {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-5px);
  }
}

